fix stretchy image responsiveness

--- a/scss/layouts/_projects.scss
+++ b/scss/layouts/_projects.scss
@@ -80,7 +80,6 @@
     @include gmq(portable) {
       height: inherit;
       max-height: 70vh;
-      max-width: 95vw;
     }
   }
 }
